--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -5,26 +5,29 @@
 	<div class="top-nav block-with-lazy">
 		<div class="container">
 			<div class="top-nav__row row">
-				<div class="col-4"></div>
-				<div class="col order-lg-0 order-last">
-					<div class="menu-mobile menu-mobile--js">
+				<div class="col col-xl-auto z">
+					<a class="top-nav__logo" href="/"><img class="img-1" src="img/svg/logo.svg" alt="" loading="lazy"/><img class="img-2 d-none d-lg-inline" src="img/svg/rosmol.svg" alt="" loading="lazy"/>
+					</a>
+				</div>
+				<div class="top-nav__col col-auto col-xl order-xl-0 order-last">
+					<div class="menu-mobile menu-mobile--js ms-auto">
 						<div class="menu-mobile__inner">
-							<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+							<div class="toggle-menu-mobile toggle-menu-mobile--js d-xl-none"><span></span>
 							</div>
 							<nav>
 								<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Наши работы</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Акции</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Заказать</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О проекте</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Участникам</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Эксперты</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Вопросы</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
 					</div>
 				</div>
-				<div class="col-auto d-lg-none">
-					<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+				<div class="col-auto d-xl-none ms-auto">
+					<div class="toggle-menu-mobile toggle-menu-mobile--js d-xl-none"><span></span>
 					</div>
 				</div>
 			</div>
