feat: add contacts, FAQ, partners

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no, viewport-fit=cover">
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,500&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 		<script>
@@ -43,8 +44,8 @@
 									<li>Экскурсии по топ-предприятиям твоего города</li>
 									<li>Практические мастер-классы</li>
 								</ul>
-								<div class="headerBlock__btn btn btn-light">Подать заявку
-								</div>
+								<a class="headerBlock__btn btn btn-light btn-light_purple" href="#">Подать заявку
+								</a>
 							</div>
 							<div class="col-lg-5">
 								<div class="headerBlock__img-wrap"><img class="img-girl" src="img/headerBlock-bg.png" alt="" loading="lazy"/>
@@ -56,15 +57,19 @@
 								<h2>Для кого?</h2>
 							</div>
 							<div class="headerBlock__icons-row row">
-								<div class="col-6">
-									<div class="item"><img src="img/svg/hat.svg" alt="" loading="lazy"/>
-										<div class="item__text">Школьники от 14 до 18 лет
+								<div class="col col-lg-6">
+									<div class="item">
+										<div class="item__img-wrap"><img src="img/svg/hat.svg" alt="" loading="lazy"/>
+										</div>
+										<div class="item__text">Школьники от 14 до 18 лет
 										</div>
 									</div>
 								</div>
-								<div class="col-6">
-									<div class="item"><img src="img/svg/star.svg" alt="" loading="lazy"/>
-										<div class="item__text">Учащиеся колледжей, вузов, предприимчивая молодёжь от 14 до 35 лет
+								<div class="col col-lg-6">
+									<div class="item">
+										<div class="item__img-wrap"><img src="img/svg/star.svg" alt="" loading="lazy"/>
+										</div>
+										<div class="item__text">Учащиеся колледжей, вузов, предприимчивая молодёжь от 14 до 35 лет
 										</div>
 									</div>
 								</div>
@@ -74,19 +79,118 @@
 								<li><span>1</span> Встретишься с крупнейшими представителями бизнеса своего региона</li>
 								<li><span>2</span> Получишь базовые знания о ведении бизнеса через экскурсии и мастер-классы</li>
 								<li><span>3</span> Обретёшь единомышленников для совместного старта и развития своего дела</li>
-							</ul><img class="star-bg" src="img/svg/star-bg.svg" alt="" loading="lazy"/>
+							</ul>
+							<div class="star-wrap"><img class="star-bg" src="img/svg/star-bg.svg" alt="" loading="lazy"/>
+							</div>
 						</div>
 					</div>
 				</div>
 				<!-- end headerBlock-->
-				<!-- start sContact-->
-				<section class="sContact section" id="sContact">
+				<!-- start sFAQ-->
+				<section class="sFAQ section" id="sFAQ">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sContact</h2>
+							<h2>Часто задаваемые вопросы:</h2>
 						</div>
-						<div class="sContact__row row">
+						<div class="dd-group dd-group-js">
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Участие в проекте платное?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Какие критерии отбора?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Какие категории?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Как узнать, что я прошёл отбор?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Кто приглашённые предприниматели?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Какие направления бизнеса будут?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Чем мне будет полезно участие в проекте?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
+							<div class="dd-group__item active">
+								<div class="dd-group__head dd-head-js">Смогут ли предприниматели стать моими наставниками?
+								</div>
+								<div class="dd-group__content dd-content-js active">
+									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+								</div>
+							</div>
 						</div>
+						<div class="text-center">
+							<a class="sFAQ__btn btn btn-light btn-light_orange" href="#">Подать заявку
+							</a>
+						</div>
+					</div>
+				</section>
+				<!-- end sFAQ-->
+				<!-- start sPartners-->
+				<section class="sPartners section" id="sPartners"><img class="zig-zag" src="img/svg/zig-zag.svg" alt="" loading="lazy"/>
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>Партнёры</h2>
+						</div>
+						<div class="sPartners__item">
+							<div class="partner-card"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
+							</div>
+							<div class="partner-card"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
+							</div>
+							<div class="partner-card"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
+							</div>
+							<div class="partner-card"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
+							</div>
+							<div class="partner-card"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
+							</div>
+							<div class="partner-card"><img src="img/svg/rosmol.svg" alt="" loading="lazy"/>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sPartners-->
+				<!-- start sContact-->
+				<section class="sContact section" id="sContact">
+					<div class="container"><img class="img" src="img/contact-bg.png" alt="" loading="lazy"/>
+						<div class="section-title">
+							<h2>Контакты</h2>
+						</div>
+						<a class="card" href="https://vk.com/rosmolbizclub">
+							<div class="card__descr-wrap"><img class="vk" src="img/svg/vk.svg" alt="" loading="lazy"/>
+								<p>Вконтакте</p>
+							</div><img class="star" src="img/svg/star-white.svg" alt="" loading="lazy"/>
+						</a>
 					</div>
 				</section>
 				<!-- end sContact-->
