feat: add sliders

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,270 @@
 					</div>
 				</div>
 				<!-- end headerBlock-->
+				<!-- start sPersons-->
+				<section class="sPersons section" id="sPersons">
+					<div class="container"><img class="star" src="img/svg/star-white.svg" alt="" loading="lazy"/>
+						<div class="section-title text-center">
+							<h2>Знакомься, наши<br>предприниматели</h2>
+						</div>
+						<div class="sPersons__slider sPersons__slider--js">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-chevron-left ">
+									<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-chevron-right ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+								</svg>
+							</div>
+							<div class="swiper-wrapper">
+								<div class="sPersons__slide swiper-slide">
+									<div class="person-card">
+										<div class="person-card__img-wrap text-center"><img src="img/sPersons-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="person-card__content">
+											<div class="person-card__name">Вадим Кульков
+											</div>
+											<div class="person-card__city">
+												<svg class="icon icon-location ">
+													<use xlink:href="img/svg/sprite.svg#location"></use>
+												</svg>Краснодарский край
+											</div>
+											<div class="person-card__company">Компания «БРОНИРУЙ»
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="person-card">
+										<div class="person-card__img-wrap text-center"><img src="img/sPersons-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="person-card__content">
+											<div class="person-card__name">Вадим Кульков
+											</div>
+											<div class="person-card__city">
+												<svg class="icon icon-location ">
+													<use xlink:href="img/svg/sprite.svg#location"></use>
+												</svg>Краснодарский край
+											</div>
+											<div class="person-card__company">Компания «БРОНИРУЙ»
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="person-card">
+										<div class="person-card__img-wrap text-center"><img src="img/sPersons-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="person-card__content">
+											<div class="person-card__name">Вадим Кульков
+											</div>
+											<div class="person-card__city">
+												<svg class="icon icon-location ">
+													<use xlink:href="img/svg/sprite.svg#location"></use>
+												</svg>Красноярский край
+											</div>
+											<div class="person-card__company">Компания «БРОНИРУЙ» Компания «БРОНИРУЙ»
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="person-card">
+										<div class="person-card__img-wrap text-center"><img src="img/sPersons-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="person-card__content">
+											<div class="person-card__name">Вадим Кульков
+											</div>
+											<div class="person-card__city">
+												<svg class="icon icon-location ">
+													<use xlink:href="img/svg/sprite.svg#location"></use>
+												</svg>Краснодарский край
+											</div>
+											<div class="person-card__company">Компания «БРОНИРУЙ»
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="person-card">
+										<div class="person-card__img-wrap text-center"><img src="img/sPersons-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="person-card__content">
+											<div class="person-card__name">Валерия Котова
+											</div>
+											<div class="person-card__city">
+												<svg class="icon icon-location ">
+													<use xlink:href="img/svg/sprite.svg#location"></use>
+												</svg>Вологодская область
+											</div>
+											<div class="person-card__company">Салон мебели VALERIE
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="person-card">
+										<div class="person-card__img-wrap text-center"><img src="img/sPersons-img-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="person-card__content">
+											<div class="person-card__name">Дмитрий Моисеенко
+											</div>
+											<div class="person-card__city">
+												<svg class="icon icon-location ">
+													<use xlink:href="img/svg/sprite.svg#location"></use>
+												</svg>Красноярский край
+											</div>
+											<div class="person-card__company">Промтехэкология
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination"></div>
+						</div>
+					</div>
+				</section>
+				<!-- end sPersons-->
+				<!-- start sPersons-->
+				<section class="sPersons section" id="sPersons2">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>Предприятия</h2>
+						</div>
+						<div class="sPersons__slider sPersons__slider--js-2">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-chevron-left ">
+									<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-chevron-right ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+								</svg>
+							</div>
+							<div class="swiper-wrapper">
+								<div class="sPersons__slide swiper-slide">
+									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<div class="row">
+											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+												<div class="firm-card__city">
+													<svg class="icon icon-location ">
+														<use xlink:href="img/svg/sprite.svg#location"></use>
+													</svg>Саранск
+												</div>
+												<div class="firm-card__company">Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций – от подготовки почвы до первичной переработки зерна; электронные решения для повышения эффективности сельхозработ и аграрного бизнеса. Продуктовая линейка компании включает в себя более 150 моделей и модификаций 24 типов техники.
+												</div>
+											</div>
+											<div class="firm-card__content col-12 col-lg-4">
+												<div class="firm-card__img-wrap"><img src="img/sPersons-firm-1.png" alt="" loading="lazy"/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<div class="row">
+											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+												<div class="firm-card__city">
+													<svg class="icon icon-location ">
+														<use xlink:href="img/svg/sprite.svg#location"></use>
+													</svg>Саранск
+												</div>
+												<div class="firm-card__company">Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций – от подготовки почвы до первичной переработки зерна; электронные решения для повышения эффективности сельхозработ и аграрного бизнеса. Продуктовая линейка компании включает в себя более 150 моделей и модификаций 24 типов техники.
+												</div>
+											</div>
+											<div class="firm-card__content col-12 col-lg-4">
+												<div class="firm-card__img-wrap"><img src="img/sPersons-firm-2.png" alt="" loading="lazy"/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<div class="row">
+											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+												<div class="firm-card__city">
+													<svg class="icon icon-location ">
+														<use xlink:href="img/svg/sprite.svg#location"></use>
+													</svg>Саранск
+												</div>
+												<div class="firm-card__company">Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций
+												</div>
+											</div>
+											<div class="firm-card__content col-12 col-lg-4">
+												<div class="firm-card__img-wrap"><img src="img/sPersons-firm-3.png" alt="" loading="lazy"/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<div class="row">
+											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+												<div class="firm-card__city">
+													<svg class="icon icon-location ">
+														<use xlink:href="img/svg/sprite.svg#location"></use>
+													</svg>Саранск
+												</div>
+												<div class="firm-card__company">Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций
+												</div>
+											</div>
+											<div class="firm-card__content col-12 col-lg-4">
+												<div class="firm-card__img-wrap"><img src="img/sPersons-firm-4.png" alt="" loading="lazy"/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<div class="row">
+											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+												<div class="firm-card__city">
+													<svg class="icon icon-location ">
+														<use xlink:href="img/svg/sprite.svg#location"></use>
+													</svg>Саранск
+												</div>
+												<div class="firm-card__company">Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций
+												</div>
+											</div>
+											<div class="firm-card__content col-12 col-lg-4">
+												<div class="firm-card__img-wrap"><img src="img/sPersons-firm-5.png" alt="" loading="lazy"/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="sPersons__slide swiper-slide">
+									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<div class="row">
+											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+												<div class="firm-card__city">
+													<svg class="icon icon-location ">
+														<use xlink:href="img/svg/sprite.svg#location"></use>
+													</svg>Саранск
+												</div>
+												<div class="firm-card__company">Официальный дилер компании «Ростсельмаш». Под собственным брендом «Ростсельмаш» выпускает широкий модельный ряд машин и оборудования для сельскохозяйственных операций
+												</div>
+											</div>
+											<div class="firm-card__content col-12 col-lg-4">
+												<div class="firm-card__img-wrap"><img src="img/sPersons-firm-6.png" alt="" loading="lazy"/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination"></div>
+						</div>
+					</div>
+				</section>
+				<!-- end sPersons-->
 				<!-- start sFAQ-->
 				<section class="sFAQ section" id="sFAQ">
 					<div class="container">
