feat: add footer

--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -1,11 +1,36 @@
 
 <footer class="footer section">
 	<div class="container">
-		<div class="row">
-			<div class="col"></div>
-			<div class="col">Footer</div>
-			<div class="col"></div>
-			<div class="col-auto"></div>
+		<div class="footer__row row">
+			<div class="footer__col col-12 col-lg">
+				<a class="footer__logo" href="/"><img src="img/svg/logo-long.svg" alt="" loading="lazy"/>
+				</a>
+				<a class="footer__link" href="#">Политика конфиденциальности
+				</a>
+				<a class="footer__link" href="#">Согласие на обработку данных
+				</a>
+			</div>
+			<div class="col-sm">
+				<nav>
+					<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О проекте</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Участникам</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Эксперты</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Вопросы</a></li>
+						<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="footer__social-col col-sm">
+				<h5>Социальные сети</h5>
+				<a class="footer__social-link" href="#">Вконтакте
+				</a>
+			</div>
+			<div class="footer__last-col col-sm-auto">
+				<h5>Контакты</h5>
+				<a class="footer__social-link" href="mailto:mikhaylov@business.fadm.gov.ru">mikhaylov@business.fadm.gov.ru
+				</a>
+			</div>
 		</div>
 	</div>
 </footer>
