feat: add apply block

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 								</div>
 							</div>
 							<div class="text_large">Благодаря участию в проекте, ты:</div>
-							<ul class="text_large">
+							<ul class="text_large list_colored list_colored_purple">
 								<li><span>1</span> Встретишься с крупнейшими представителями бизнеса своего региона</li>
 								<li><span>2</span> Получишь базовые знания о ведении бизнеса через экскурсии и мастер-классы</li>
 								<li><span>3</span> Обретёшь единомышленников для совместного старта и развития своего дела</li>
@@ -86,6 +86,71 @@
 					</div>
 				</div>
 				<!-- end headerBlock-->
+				<!-- start sApply-->
+				<section class="sApply section" id="sApply"><img class="zig-zag" src="img/svg/zig-zag2.svg" alt="" loading="lazy"/>
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>Как подать заявку?</h2>
+						</div>
+						<div class="sApply__row row">
+							<div class="sApply__col col-lg-7">
+								<ul class="text_large list_colored list_colored_green">
+									<li><span>1</span> Зарегистрироваться на платформе Росмолодёжь.Бизнес и подтвердить регистрацию через почту</li>
+									<li><span>2</span> В разделе «мероприятия» выбрать мероприятие в своём регионе и подать заявку на участие</li>
+									<li><span>3</span> На мероприятии предъявить организаторам подтверждение регистрации и получить мерч</li>
+								</ul>
+							</div>
+							<div class="sApply__col col-lg-5">
+								<div class="sApply__img-wrap"><img class="apply" src="img/sApply-img.png" alt="" loading="lazy"/>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="container">
+						<div class="sApply__slider-row row">
+							<div class="sApply__col col-12 col-lg-8">
+								<div class="sApply__slider sApply__slider--js">
+									<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+										<svg class="icon icon-chevron-left ">
+											<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+										</svg>
+									</div>
+									<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+										<svg class="icon icon-chevron-right ">
+											<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+										</svg>
+									</div>
+									<div class="swiper-wrapper">
+										<div class="sApply__slide swiper-slide"><img class="object-fit-js" src="img/sApply-sl-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="sApply__slide swiper-slide"><img class="object-fit-js" src="img/sApply-sl-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="sApply__slide swiper-slide"><img class="object-fit-js" src="img/sApply-sl-1.png" alt="" loading="lazy"/>
+										</div>
+										<div class="sApply__slide swiper-slide"><img class="object-fit-js" src="img/sApply-sl-1.png" alt="" loading="lazy"/>
+										</div>
+									</div>
+									<div class="swiper-pagination"></div>
+								</div>
+							</div>
+							<div class="sApply__col col-12 col-lg-4">
+								<div class="num-card">
+									<div class="num">10 000+</div>
+									<p>участников</p>
+								</div>
+								<div class="num-card">
+									<div class="num">300+</div>
+									<p>встреч, экскурсий и мастер-классов</p>
+								</div>
+								<div class="num-card">
+									<div class="num">89</div>
+									<p>регионов</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sApply-->
 				<!-- start sPersons-->
 				<section class="sPersons section" id="sPersons">
 					<div class="container"><img class="star" src="img/svg/star-white.svg" alt="" loading="lazy"/>
